--- a/app/src/main/res/layout/activity_addition1.xml
+++ b/app/src/main/res/layout/activity_addition1.xml
@@ -248,7 +248,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="number|numberDecimal"
         android:paddingStart="10dp"
         android:hint="@string/HintPH"
         android:ems="10"
